--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,6 +37,16 @@ services:
     volumes:
       - mongo_data:/data/db
 
+  phpmyadmin:
+    image: phpmyadmin/phpmyadmin
+    container_name: pma
+    restart: always
+    ports:
+      - "8080:80"
+    environment:
+      PMA_HOST: mysql
+      MYSQL_ROOT_PASSWORD: example  
+
 volumes:
   mysql_data:
   mongo_data:
